LPS-64129 Apply lexicon to view KaleoProcess and to view, add, edit KaleoProcess Record

--- a/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/META-INF/resources/admin/record_search_results.jspf
+++ b/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/META-INF/resources/admin/record_search_results.jspf
@@ -30,6 +30,7 @@ else {
 	SearchContext searchContext = SearchContextFactory.getInstance(request);
 
 	searchContext.setAttribute("recordSetId", kaleoProcess.getDDLRecordSetId());
+	searchContext.setAttribute(Field.STATUS, WorkflowConstants.STATUS_ANY);
 	searchContext.setEnd(searchContainer.getEnd());
 	searchContext.setKeywords(displayTerms.getKeywords());
 	searchContext.setStart(searchContainer.getStart());
