--- a/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/META-INF/resources/admin/css/main.scss
+++ b/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/META-INF/resources/admin/css/main.scss
@@ -50,6 +50,10 @@
 		margin-top: 1.5em;
 	}
 
+	ul.kaleo-process-workflow-nav-tabs {
+		margin-bottom: 0px;
+	}
+
 	.form .taglib-form-navigator > .form-steps > ul.form-navigator.nav {
 		margin: 6px 0 20px 0;
 
