LPS-65102 Expands workspace height of the Workflow.

--- a/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-designer-web/src/main/resources/META-INF/resources/designer/css/main.scss
+++ b/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-designer-web/src/main/resources/META-INF/resources/designer/css/main.scss
@@ -34,7 +34,9 @@
 }
 
 .diagram-builder {
-	height: 600px;
+	.tab-pane {
+		height: 100%;
+	}
 
 	.property-builder-fields-container {
 		margin: 0;
